# Lovr-haxe-externs

./: .gitmodules  Externs Generator.py  ExternsGenerator.py  Lovr.hx  README.md
audio/: Audio.hx  Source.hx
data/: Blob.hx  Image.hx  Rasterizer.hx
event/: Event.hx
filesystem/: File.hx
graphics/: Font.hx  Material.hx  Model.hx  Pass.hx  Readback.hx
lovr/: Lovr.hx
lovr-dev/: CHANGES.md  CMakeLists.txt  README.md
lovr-dev/etc/: boot.lua
lovr-dev/etc/nogame/: arg.lua
lovr-dev/src/: util.h
lovr-dev/src/api/: api.h  l_data_modelData.c  l_event.c  l_graphics.c  l_graphics_buffer.c  l_graphics_pass.c  l_headset.c  l_headset_layer.c  l_math_curve.c  l_physics.c  l_physics_shapes.c  l_system.c
lovr-dev/src/core/: gpu.h  gpu_vk.c  gpu_web.c  os.h  os_android.c  os_glfw.h  os_linux.c  os_wasm.c  os_win32.c
lovr-dev/src/lib/stb/: stb_vorbis.h
lovr-dev/src/modules/audio/: audio.c  spatializer.h
lovr-dev/src/modules/data/: modelData.h  modelData_gltf.c
lovr-dev/src/modules/event/: event.h
lovr-dev/src/modules/graphics/: graphics.c  graphics.h
lovr-dev/src/modules/headset/: headset.c  headset.h
lovr-dev/src/modules/math/: math.c  math.h
lovr-dev/src/modules/physics/: physics.c
lovr-dev/src/modules/system/: system.c  system.h
lovr-dev/src/modules/thread/: thread.c
lovr-dev/test/lovr/: graphics.lua  physics.lua
lovr/audio/: Audio.hx  Source.hx
lovr/data/: Blob.hx  Data.hx  Image.hx  ModelData.hx  Rasterizer.hx  Sound.hx
lovr/event/: Event.hx
lovr/filesystem/: File.hx  Filesystem.hx
lovr/graphics/: Buffer.hx  Font.hx  Graphics.hx  Material.hx  Mesh.hx  Model.hx  Pass.hx  Readback.hx  Sampler.hx  Shader.hx  Texture.hx
lovr/headset/: Headset.hx  Layer.hx
lovr/math/: Curve.hx  Mat4.hx  Math.hx  Quat.hx  RandomGenerator.hx  Vec2.hx  Vec3.hx  Vec4.hx  Vectors.hx
lovr/physics/: BallJoint.hx  BoxShape.hx  CapsuleShape.hx  Collider.hx  ConeJoint.hx  Contact.hx  ConvexShape.hx  CylinderShape.hx  DistanceJoint.hx  HingeJoint.hx  Joint.hx  MeshShape.hx  Physics.hx  Shape.hx  SliderJoint.hx  SphereShape.hx  TerrainShape.hx  WeldJoint.hx  World.hx
lovr/system/: System.hx
lovr/thread/: Channel.hx  Thread.hx
lovr/timer/: Timer.hx
math/: RandomGenerator.hx  Vec4.hx
physics/: BoxShape.hx  CapsuleShape.hx  Collider.hx  ConvexShape.hx  DistanceJoint.hx  HingeJoint.hx  MeshShape.hx  Physics.hx  SliderJoint.hx  SphereShape.hx
thread/: Channel.hx  Thread.hx
